# fastapi-crms-demo

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose-test.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2024-06-08_363d71e0823f_initial_migration.py  2024-06-09_72d543529fa8_initial_migration.py  2024-06-09_ead411cc0362_added_a_column_a_new_column.py  2024-06-16_5ee6d6b471ca_content_columns.py
app/domain/: content.py  contracts.py
app/middleware/: exception_handlers.py
app/orm/: __init__.py  content.py  contracts.py
app/repositories/: content.py  contracts.py
app/routes/: content.py  contracts.py  router.py  types.py
app/services/: content.py  contracts.py  domain_services.py  unit_of_work.py
app/tests/: conftest.py
app/tests/e2e/: test_contracts.py
app/tests/integration/: test_contracts.py  test_uow.py
app/tests/unit/: test_contracts.py  test_license.py
app/utils/: config.py
