[tool.poetry]
name = "fastapi-crms-demo"
version = "0.1.0"
description = ""
authors = ["Nobody"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ruff = "^0.4.7"
debugpy = "^1.8.1"

[tool.ruff.lint]
unfixable = ["F401"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
markers= """
    unit: For our domain models
    integration: For our services
    e2e: For our API testing
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
